New fluent API for sensor. New architecture.

--- a/aicdemos/aicdemologin/src/main/res/layout/activity_register.xml
+++ b/aicdemos/aicdemologin/src/main/res/layout/activity_register.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="aic.zenika.fr.login.RegisterActivity">
+    tools:context="aic.zenika.com.login.RegisterActivity">
 
     <TextView
         android:text="@string/login_ok"
