Update LoginTestCase to work with UiAutomator 2.0.

--- a/aicdemos/aicdemologin/src/main/res/layout/activity_register.xml
+++ b/aicdemos/aicdemologin/src/main/res/layout/activity_register.xml
@@ -6,6 +6,7 @@
     tools:context="aic.zenika.com.login.RegisterActivity">
 
     <TextView
+        android:id="@+id/info"
         android:text="@string/login_ok"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
