--- a/aicdemos/aicdemologin/src/main/res/layout-land/activity_main.xml
+++ b/aicdemos/aicdemologin/src/main/res/layout-land/activity_main.xml
@@ -45,6 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:hint=""
                 android:backgroundTint="@color/red"
                 android:shadowColor="@color/red"/>
         </LinearLayout>
@@ -66,7 +67,8 @@
                 android:id="@+id/password_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:inputType="text"
+                android:hint=""
                 android:backgroundTint="@color/red"
                 android:shadowColor="@color/red"/>
         </LinearLayout>
