--- a/aicdemos/aicdemologin/src/main/res/layout/activity_main.xml
+++ b/aicdemos/aicdemologin/src/main/res/layout/activity_main.xml
@@ -40,6 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:text=""
+            android:hint=""
             android:backgroundTint="@color/red"
             android:shadowColor="@color/red"/>
     </LinearLayout>
@@ -61,7 +63,8 @@
             android:id="@+id/password_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
+            android:inputType="text"
+            android:hint=""
             android:backgroundTint="@color/red"
             android:shadowColor="@color/red"/>
     </LinearLayout>
