--- a/aicdemos/aicdemosensor/src/main/res/layout/fragment_rot_vector_sensor.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/fragment_rot_vector_sensor.xml
@@ -91,7 +91,7 @@
                 android:layout_weight="50"
                 android:gravity="end"
                 android:paddingEnd="@dimen/default_margin"
-                android:text="@string/accelerometer_z_label" />
+                android:text="@string/cos_rot" />
             <TextView
                 android:id="@+id/cos_rot"
                 android:layout_width="0dp"
