--- a/aicdemos/aicdemosensor/src/main/res/layout/fragment_home.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/fragment_home.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context="aic.zenika.com.sensor.controller.fragment.HomeFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/hello_blank_fragment" />
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_gravity="center" />
 </FrameLayout>
