--- a/aicdemos/aicdemosensor/src/main/res/layout-land/fragment_accelerometer.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout-land/fragment_accelerometer.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -125,7 +125,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -148,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -171,7 +171,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -194,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
