--- a/aicdemos/aicdemosensor/src/main/res/layout/activity_base.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/activity_base.xml
@@ -7,7 +7,18 @@
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#3587c8">
+
+        <ImageView
+            android:layout_width="411dp"
+            android:layout_height="191dp"
+            android:id="@+id/imageView2"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_aic"
+            android:background="#3587c8" />
+    </FrameLayout>
+
     <!-- The navigation drawer -->
     <ListView android:id="@+id/left_drawer"
         android:layout_width="240dp"
