--- a/aicdemos/aicdemosensor/src/main/res/layout/activity_main.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#3587c8">
+    </FrameLayout>
     <!-- The navigation drawer -->
     <ListView android:id="@+id/left_drawer"
         android:layout_width="@dimen/navigation_drawer_size"
