--- a/aicdemos/aicdemosensor/src/main/res/layout/fragment_ambient_thermometer.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/fragment_ambient_thermometer.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:textSize="40sp"
-        android:textColor="@color/DarkRed"
+        android:textColor="@color/White"
         android:gravity="center"
         android:layout_margin="@dimen/default_margin"/>
 
