--- a/aicdemos/aicdemosensor/src/main/res/layout/fragment_battery.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/fragment_battery.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:textSize="40sp"
-        android:textColor="@color/DarkRed"
+        android:textColor="@color/White"
         android:gravity="center"
         android:layout_margin="@dimen/default_margin"/>
 
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -135,7 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -151,6 +151,7 @@
                 android:layout_weight="50"
                 android:gravity="end"
                 android:paddingEnd="@dimen/default_margin"
+                android:textColor="@android:color/white"
                 android:text="@string/battery_voltage_label"/>
             <TextView
                 android:id="@+id/battery_voltage"
@@ -158,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
