--- a/aicdemos/aicdemosensor/src/main/res/layout/fragment_home.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/fragment_home.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="aic.zenika.com.sensor.controller.fragment.HomeFragment">
+    tools:context="aic.zenika.com.sensor.controller.fragment.HomeFragment"
+    android:background="#3587c8">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="317dp"
+        android:layout_height="206dp"
         android:id="@+id/imageView"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:src="@drawable/ic_aic" />
 </FrameLayout>
