--- a/aicdemos/aicdemosensor/src/main/res/layout/fragment_magnetometer.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/fragment_magnetometer.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
         <LinearLayout
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
         <LinearLayout
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
                 android:paddingStart="@dimen/default_margin"
-                android:textColor="@color/DarkRed"
+                android:textColor="@color/White"
                 android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>:q
