--- a/aicdemos/aicdemosensor/src/main/res/layout/fragment_bluetooth.xml
+++ b/aicdemos/aicdemosensor/src/main/res/layout/fragment_bluetooth.xml
@@ -8,13 +8,10 @@
     android:orientation="vertical"
     tools:context="aic.zenika.com.sensor.controller.fragment.BluetoothFragment">
 
-    <TextView
-        android:id="@+id/pressure_level"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:textSize="40sp"
-        android:textColor="@color/White"
-        android:gravity="center"
-        android:layout_margin="@dimen/default_margin"/>
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
